// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error view 1`] = `
<div>
  <div>
    Empty State
  </div>
  <div>
    <Watermark
      height={350}
      viewBox="0 0 350 200"
      width={500}
    />
  </div>
</div>
`;

exports[`2. an error view with header 1`] = `
<div>
  <div>
    Empty State
  </div>
  <div>
    <Watermark
      height={350}
      viewBox="0 0 350 200"
      width={500}
    />
  </div>
</div>
`;

exports[`3. an empty list 1`] = `
<div>
  <div>
    Empty state
  </div>
  <div>
    <Watermark
      height={350}
      viewBox="0 0 350 200"
      width={500}
    />
  </div>
</div>
`;

exports[`4. loading state 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <Pagination
            hideResults={false}
            pageSize={3}
          />
        </div>
      </div>
    </div>
    <div
      accessibility-label="empty.0"
      id="empty.0"
    >
      <div>
        <div>
          <Card
            imageRatio={1}
            isLoading={true}
            showImage={true}
          />
        </div>
      </div>
    </div>
    <div
      accessibility-label="empty.1"
      id="empty.1"
    >
      <div>
        <div>
          <div />
        </div>
        <div>
          <Card
            imageRatio={1}
            isLoading={true}
            showImage={true}
          />
        </div>
      </div>
    </div>
    <div
      accessibility-label="empty.2"
      id="empty.2"
    >
      <div>
        <div>
          <div />
        </div>
        <div>
          <Card
            imageRatio={1}
            isLoading={true}
            showImage={true}
          />
        </div>
      </div>
    </div>
    <div>
      <div>
        <Pagination
          hideResults={true}
          pageSize={3}
        />
      </div>
    </div>
  </div>
</div>
`;
